blocks/footer/footer.css
.footer-wrapper {
  background: var(--primary-black);
}

.footer {
  color: var(--primary-white);
  padding: 60px 32px 10px;
  font-size: 14px;
  margin: auto;
  max-width: 1376px;
}

.footer ul {
  list-style: none;
  padding: 0;
}

.footer .footer-social-media-section {
  margin-top: 32px;
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

.footer .footer-social-media {
  border-radius: 17.5px;
  border: 2px solid var(--secondary-dark-gold);
  color: var(--secondary-dark-gold);
  text-decoration: none;
  display: flex;
  width: 35px;
  height: 35px;
  align-items: center;
  justify-content: center;
  font-size: 20px;
}

.footer .footer-social-media:hover {
  color: #af9866;
  border-color: #af9866;
}

.footer .footer-social-media::before {
  width: 17px;
}

.footer h1,
.footer h2,
.footer h3 {
  font-size: 14px;
  font-weight: 400;
  margin-bottom: 5px;
  border-bottom: 2px solid;
  line-height: 22px;
  margin-top: 0;
}

.footer ul li a {
  color: var(--primary-white);
}

.footer .footer-bottom-section li a {
  color: #999;
}

.footer ul li a:hover {
  color: #999;
  text-decoration: none;
}

.footer h1 ~ ul,
.footer h2 ~ ul,
.footer h3 ~ ul {
  display: flex;
  flex-flow: row wrap;
}

.footer h1 ~ ul li,
.footer h2 ~ ul li,
.footer h3 ~ ul li {
  width: 50%;
}

.footer hr {
  border-bottom: 1px solid #111;
  width: 100%;
}

.footer .footer-bottom-section {
  display: flex;
  align-items: end;
  font-size: 12px;
  justify-content: space-between;
}

.footer .footer-bottom-section ul {
  max-width: 50%;
}

.footer .footer-bottom-section li {
  padding: 10px 0;
}

.footer .footer-bottom-section li a:hover {
  color: var(--primary-white);
}

.footer .footer-form-and-social-section {
  display: flex;
  flex-direction: column;
}

.footer .footer-form-section p {
  margin-top: 0;
}

@media (min-width: 495px) {
  .footer .footer-form-and-social-section {
    width: 255px;
  }
}

@media (min-width: 1024px) {
  .footer {
    padding: 60px 48px 10px;
  }

  .footer .footer-content {
    display: flex;
    flex-flow: row wrap;
  }

  .footer .footer-main-content {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: flex-start;
    width: 100%;
  }

  .footer .footer-links-section {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 20px;
  }

  .footer .footer-links-col-1 {
    width: 185px;
  }

  .footer .footer-bottom-section li {
    padding: 10px;
    width: auto;
  }

  .footer .footer-links-col-1 ul li {
    width: 100%;
  }

  .footer .footer-links-col-2 {
    width: 370px;
    margin-left: 20px;
  }

  .footer .footer-bottom-section {
    width: 100%;
  }

  .footer .footer-bottom-section ul {
    width: 100%;
    display: flex;
    flex-wrap: nowrap;
    max-width: unset;
    align-items: flex-start;
    justify-content: left;
  }

  hr {
    margin-top: 65px;
  }
}

/* eloqua footer form styles - START */
.footer .elq-form .field-style {
  margin: 0;
}

.footer .elq-form .item-padding {
  padding: 0;
}

.footer .eloqua-form .elq-form input[type="text"] {
  background-color: #212121;
  padding: 15px 10px;
  border: none;
  width: 100%;
  font-family: var(--body-ff);
  font-size: 16px;
  line-height: 16px;
  color: var(--primary-white);
}

.footer .eloqua-form .elq-form input[type="text"]::placeholder {
  color: var(--primary-white);
}

.footer .elq-form .checkbox-label {
  font-size: 13px;
  font-family: var(--body-ff);
  bottom: 0;
  padding-left: 0;
}

.footer .elq-form input.submit-button {
  color: var(--secondary-dark-gold);
  background: transparent;
  border: solid 2px var(--secondary-dark-gold);
  font-size: 20px !important;
  line-height: 20px;
  height: auto !important;
  cursor: pointer;
  margin: 0;
  padding: 5px 10px;
}

.footer .elq-form input.submit-button:hover {
  color: #af9866;
  border-color: #af9866;
}

.footer .eloqua-form p {
  font-size: 11px;
  font-family: var(--body-ff);
}

.footer .eloqua-form .elq-form .email-and-submit-container {
  display: flex;
  align-items: stretch;
  position: relative;
}

.footer .eloqua-form .elq-form .email-and-submit-container input[type="text"] {
  padding-right: 40px;
}

.footer .elq-form .loader {
  position: absolute;
  right: 10px;
  bottom: 50%;
  transform: translate(0, 50%);
  border-top: 3px solid #212121;
  margin-bottom: -12px;
  background: #212121;
}

.footer
  .eloqua-form
  .elq-form
  .email-and-submit-container
  input[type="submit"] {
  position: absolute;
  right: 0;
  border: none;
  background: transparent;
  top: 50%;
  transform: translateY(-50%);
  padding: 5px 10px 5px 5px;
}

.footer .checkbox-span {
  position: relative;
}

.footer .checkbox-span input[type="checkbox"][id] {
  width: 20px;
  height: 20px;
  position: absolute;
  top: 4px;
  left: 0;
  padding: 0;
}

.footer .checkbox-span label[for] {
  position: relative;
  margin-left: 0;
}

.footer .checkbox-span label[for]::before {
  content: "";
  width: 20px;
  height: 20px;
  display: inline-block;
  border: solid 2px var(--secondary-dark-gold);
  margin-right: 10px;
  position: relative;
  top: 4px;
  background: var(--primary-black);
}

.footer .checkbox-span input:checked ~ label[for]::after {
  content: "\f00c";
  font-family: var(--ff-fontawesome);
  color: var(--secondary-dark-gold);
  position: absolute;
  font-size: 18px;
  left: 1px;
  top: 50%;
  transform: translateY(-50%);
}

.confirm-checkbox {
  user-select: none;
  cursor: pointer;
  opacity: 0;
  transition: opacity 1s;
}

.confirm-checkbox.show {
  opacity: 1;
}

/* eloqua footer form styles - END */

